--- a/CNN_BloodCell_1.ipynb
+++ b/CNN_BloodCell_1.ipynb
@@ -961,7 +961,7 @@
         "    print(\"now =\", now)\n",
         "    dt_string = now.strftime(\"%d_%m_%Y\")\n",
         "\n",
-        "    # save model dict on drive with time signature\n",
+        "    # save model dict on drive with time signature on paperspace server\n",
         "    path = f'/notebooks/logs/model_{dt_string}_{test_acc}.csv'\n",
         "    df.to_csv(path, index = False, header=True)"
       ]
