changed learning rate

--- a/CNN_BloodCell_1.ipynb
+++ b/CNN_BloodCell_1.ipynb
@@ -650,7 +650,7 @@
         "root = '/notebooks/dataset2-master/dataset2-master/images'\n",
         "in_channels = 3\n",
         "num_classes = 4\n",
-        "learning_rate = 0 # got out of local minima with 9e-4, less than this value seams not to work at all or poorly at most.\n",
+        "learning_rate = 9e-4 # got out of local minima with 9e-4, less than this value seams not to work at all or poorly at most.\n",
         "batch_size = 32\n",
         "num_epochs = 100\n",
         "weight_decay = 0.001 # for ADAM optimizer\n",
